Allow html tags (a, b, i, pre). Turn off StripWhitespaceMiddleware to prevent stripping of new lines in textarea fields.

--- a/opentodo_media/forms.css
+++ b/opentodo_media/forms.css
@@ -48,6 +48,7 @@ div.editformWrapper {
 }
 #editform textarea, #projectform textarea {
 	width: 600px;
+	height: 230px;
 }
 #editform #id_title, #projectform #id_title {
 	width: 600px;
