--- a/opentodo_media/main.css
+++ b/opentodo_media/main.css
@@ -281,7 +281,7 @@ div.top-indent {
 }
 div.comment {
 	padding-top: 0px;
-	margin-bottom:12px;
+	margin-bottom:15px;
 	width: 50em;
 	color: #000;
 
